Removed checkstyle and replaced with editorconfig (#147)
* Removed checkstyle and replaced with editorconfig

Signed-off-by: Francesco Guardiani <francescoguard@gmail.com>

* Removed checkstyle stuff in dockerfile and readme

Signed-off-by: Francesco Guardiani <francescoguard@gmail.com>

* Reverted the proto generated stuff

Signed-off-by: Francesco Guardiani <francescoguard@gmail.com>

* Proto stuff

Signed-off-by: Francesco Guardiani <francescoguard@gmail.com>

* Yeah this plugin could be better

Signed-off-by: Francesco Guardiani <francescoguard@gmail.com>